<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:fitsSystemWindows="true">

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorPrimaryMedium"
		android:paddingTop="16dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
		android:paddingBottom="16dp">

		<RelativeLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary"
			android:layout_marginBottom="16dp"
			android:elevation="6dp"
			android:paddingTop="16dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingBottom="16dp">



			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:id="@+id/input_name_layout"
				android:layout_toRightOf="@+id/name_icon">

				<EditText
					android:id="@+id/input_name"
					android:layout_width="264dp"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:hint="@string/input_name_hint" />

			</android.support.design.widget.TextInputLayout>

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_mail_black_64dp"
				android:id="@+id/email_icon"
				android:layout_weight="1"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_above="@+id/input_phone_layout"
				android:layout_alignTop="@+id/input_email_layout"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:id="@+id/input_email_layout"
				android:layout_below="@+id/input_name_layout"
				android:layout_toRightOf="@id/email_icon">

				<EditText
					android:id="@+id/input_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:hint="@string/input_email_hint" />
			</android.support.design.widget.TextInputLayout>

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_call_black_64dp"
				android:id="@+id/phone_icon"
				android:layout_weight="1"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_above="@+id/gender_text_label"
				android:layout_alignTop="@+id/input_phone_layout"/>

			<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:id="@+id/input_phone_layout"
				android:layout_below="@+id/input_email_layout"
				android:layout_toRightOf="@id/phone_icon">

				<EditText
					android:id="@+id/input_phone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:hint="@string/input_phone_hint" />
			</android.support.design.widget.TextInputLayout>

			<TextView
				android:text="Gender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/gender_text_label"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="10dp"
				android:textSize="18sp"
				android:textColor="@color/colorDark"
				android:layout_below="@+id/input_phone_layout"/>

			<RadioGroup
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/gender_radiogroup"
				android:layout_below="@+id/gender_text_label">

				<RadioButton
					android:text="Male"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/radioButton2"
					android:layout_weight="1"/>

				<RadioButton
					android:text="Female"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/radioButton4"
					android:layout_weight="1"/>

			</RadioGroup>

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:srcCompat="@drawable/ic_account_circle_black_64dp"
				android:id="@+id/name_icon"
				android:layout_weight="1"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_above="@+id/input_email_layout"
				android:layout_alignTop="@+id/input_name_layout"/>

			<TextView
				android:text="TextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:id="@+id/textView6"/>

		</RelativeLayout>

	</LinearLayout>
</ScrollView>